--- a/css/main.css
+++ b/css/main.css
@@ -220,25 +220,6 @@ span {
     bottom: 67px;
 
 }
-#app3::after{
-    border-width:10px; 
-    border-style: solid; 
-
-    content: "";
-    position: absolute;
-    left: 0px;
-    right: 1px;
-    top: 0px;
-    bottom: 1px;
-    border: 3px solid rgb(33, 173, 33);
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius:10px;
-    border-bottom-left-radius: 10px;
-    width: 28px;
-    height: 28px;
-}
-
 
 #num{
     display:none;
@@ -279,7 +260,7 @@ img{
     align-items: center;
   }
   
-  #inactivityMsg, #inactivityMsg2 {
+  #inactivityMsg, #inactivityMsg2, #sharetext {
     position: absolute;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -314,14 +295,22 @@ img{
   
   #shareicn {
       position: absolute;
-      margin-left: 7px; 
+      margin-left: 6.625px; 
+      opacity: 0.5;
   }
-  #sharepic{ 
+  .sharebig{ 
     position:absolute;
     left:40px;
     top:100px;
     z-index: 1000;
     animation: 2s spin infinite ;
+  }
+  #sharetext{
+      top:250px;
+      font-size: 15px;
+      text-align: center;
+      left:10px;
+      background-image: linear-gradient(45deg, rgb(117, 117, 255), rgba(20, 125, 190, 0.801));
   }
 
   @keyframes shake {
