Got rid of a font

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
     -moz-transform: scale(3);
     zoom:200%;
     */
-    font-family: 'Roboto Condensed', sans-serif;
+    /*font-family: 'Roboto Condensed', sans-serif;*/
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
